--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
           mamba-version: "*"
           channels: conda-forge, defaults
           auto-activate-base: false
-          activate-environment: python_template
+          activate-environment: roman_filters
           environment-file: environment.yml
         run: |
           mamba info
