--- a/environment.yaml
+++ b/environment.yaml
@@ -2,14 +2,17 @@ name: roman_filters
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python < 3.11
   - pip
   - pytest
   - flake8
   - black
   - sphinx
+  - notebook
+  - jupyterlab
+  - jupyterhub
   - ipykernel
-  - ipywidgets=7.7.1
+  - ipywidgets < 8.0
   - tqdm
   - matplotlib
   - numpy
@@ -18,4 +21,5 @@ dependencies:
   - emcee
   - corner
   - cmake
+  - doxygen
   - pip:
