fixed environment setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = LEPHARE
 	url = https://gitlab.lam.fr/Galaxies/LEPHARE.git
 [submodule "pylephare"]
-	path = py/pylephare
+	path = pylephare
 	url = https://github.com/MartinBriday/pylephare.git
