--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout repository
@@ -29,10 +29,7 @@ jobs:
           channels: conda-forge, defaults
           auto-activate-base: false
           activate-environment: roman_filters
-          environment-file: environment.yml
-        run: |
-          mamba info
-          mamba list
+          environment-file: env.yml
 
       - name: Lint
         run: |
