--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,7 +20,7 @@ jobs:
 
           stale-pr-message: 'This PR is stale because it has been open 2 weeks with no activity. Remove stale label or comment or this will be closed in a week.'
           close-pr-message: 'This PR was closed because it has been stalled for a week with no activity.'
-          stale-issue-label: 'stale-pr'
+          stale-pr-label: 'stale-pr'
 
           days-before-stale: 14
           days-before-close: 7
