--- a/env.yml
+++ b/env.yml
@@ -24,7 +24,9 @@ dependencies:
   - cmake
   - doxygen
   - sncosmo
+  - gitpython
   - pip:
     - propobject
     - astrobject
     - pyifu
+    - desc-bpz
