rename repo and env

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: roman_photo_z
+name: roman-photo-z
 channels:
   - conda-forge
 dependencies:
@@ -15,7 +15,7 @@ dependencies:
   - ipywidgets < 8.0
   - tqdm
   - matplotlib
-  - numpy
+  - numpy < 1.23.0
   - scipy
   - pandas
   - astropy
@@ -23,10 +23,12 @@ dependencies:
   - corner
   - cmake
   - doxygen
-  - sncosmo
   - gitpython
+  - pytables
+  - h5py
+  - synphot
+  - zipfile
+  - logging
   - pip:
-    - propobject
-    - astrobject
-    - pyifu
     - desc-bpz
+    - pz-rail-bpz
