--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           mamba-version: "*"
           channels: conda-forge, defaults
           auto-activate-base: false
-          activate-environment: roman_photo_z
+          activate-environment: roman-photo-z
           environment-file: env.yml
 
       - name: Lint
