--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
 name: CI
 
-on:
-  pull_request:
-    branches: main
+on: ['push', 'pull_request']
 
 permissions:
   contents: read
@@ -17,7 +15,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout repository
@@ -30,11 +28,8 @@ jobs:
           mamba-version: "*"
           channels: conda-forge, defaults
           auto-activate-base: false
-          activate-environment: roman_filters
-          environment-file: environment.yml
-        run: |
-          mamba info
-          mamba list
+          activate-environment: roman-photo-z
+          environment-file: env.yml
 
       - name: Lint
         run: |
