--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,229 @@
-alabaster==0.7.13
+alabaster @ file:///home/conda/feedstock_root/build_artifacts/alabaster_1673645646525/work
+alembic @ file:///home/conda/feedstock_root/build_artifacts/alembic_1684377053240/work
 anyio==3.7.1
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1649077682618/work
+argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1640817743617/work
+argon2-cffi-bindings @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi-bindings_1666850813776/work
 arrow==1.2.3
+arviz @ file:///home/conda/feedstock_root/build_artifacts/arviz_1678789125032/work
+astrobject==0.8.6
 astropy==5.3.1
-asttokens==2.2.1
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1670263926556/work
+async-generator==1.10
+async-lru @ file:///home/conda/feedstock_root/build_artifacts/async-lru_1676985229141/work
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1683424013410/work
+Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1677767029043/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
+beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1680888073205/work
 black==23.7.0
-bleach==6.0.0
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1674535352125/work
+blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1681349778161/work
 blosc2==2.0.0
+cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
+cattrs==23.1.2
 ceci==1.14
 certifi==2023.5.7
-cffi==1.15.1
+certipy==0.1.3
+cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1671179893800/work
 charset-normalizer==3.2.0
 click==8.1.4
-comm==0.1.3
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1679481329611/work
 contourpy==1.1.0
-corner==2.2.2
-cycler==0.11.0
+corner @ file:///home/conda/feedstock_root/build_artifacts/corner_1680889686676/work
+cplot==0.9.3
+cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography-split_1685659597707/work
+cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
 Cython==0.29.36
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
+debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1680755676047/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
 Deprecated==1.2.14
 desc-bpz==0.2
 docopt==0.6.2
-docutils==0.20.1
-emcee==3.1.4
+docutils @ file:///Users/runner/miniforge3/conda-bld/docutils_1684324408576/work
+emcee @ file:///home/conda/feedstock_root/build_artifacts/emcee_1674847341577/work
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
 et-xmlfile==1.1.0
 exceptiongroup==1.1.2
-executing==1.2.0
-fastjsonschema==2.17.1
-flake8==6.0.0
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
+extinction @ file:///Users/runner/miniforge3/conda-bld/extinction_1667484958959/work
+fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1684761244589/work/dist
+fjson==0.1.6
+flake8 @ file:///home/conda/feedstock_root/build_artifacts/flake8_1669396691980/work
+flit_core @ file:///home/conda/feedstock_root/build_artifacts/flit-core_1684084314667/work/source/flit_core
 fonttools==4.40.0
 fqdn==1.5.1
-gitdb==4.0.10
+gitdb @ file:///home/conda/feedstock_root/build_artifacts/gitdb_1669279893622/work
 GitPython==3.1.32
+greenlet @ file:///Users/runner/miniforge3/conda-bld/greenlet_1684083176615/work
+h5netcdf @ file:///home/conda/feedstock_root/build_artifacts/h5netcdf_1685706630067/work
 h5py==3.9.0
-idna==3.4
-imagesize==1.4.1
-iniconfig==2.0.0
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
+imagesize @ file:///home/conda/feedstock_root/build_artifacts/imagesize_1656939531508/work
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1682176699712/work
+importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1676919000169/work
+iniconfig @ file:///home/conda/feedstock_root/build_artifacts/iniconfig_1673103042956/work
 ipykernel==6.24.0
-ipython==8.14.0
+ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1685727999785/work
 ipython-genutils==0.2.0
-ipywidgets==7.7.5
+ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1680045013045/work
 isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1669134318875/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
+json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
 jsonpointer==2.4
 jsonschema==4.18.0
 jsonschema-specifications==2023.6.1
-jupyter-events==0.6.3
+jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1673559782596/work
+jupyter-lsp @ file:///home/conda/feedstock_root/build_artifacts/jupyter-lsp-meta_1685453365113/work/jupyter-lsp
+jupyter-telemetry @ file:///home/conda/feedstock_root/build_artifacts/jupyter_telemetry_1605173804246/work
 jupyter_client==8.3.0
 jupyter_core==5.3.1
 jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
+jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1673491454549/work
+jupyterhub @ file:///home/conda/feedstock_root/build_artifacts/jupyterhub-feedstock_1686267805477/work
+jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1686273322413/work
+jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1649936611996/work
 jupyterlab-widgets==1.1.4
-kiwisolver==1.4.4
-MarkupSafe==2.1.3
+jupyterlab_server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1681424698040/work
+kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1666805765141/work
+lephare==2.0.0
+Mako @ file:///home/conda/feedstock_root/build_artifacts/mako_1668568582731/work
+markdown-it-py==3.0.0
+MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1685769224421/work
 matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+matplotx==0.3.10
+mccabe @ file:///home/conda/feedstock_root/build_artifacts/mccabe_1643049622439/work
+mdurl==0.1.2
 mistune==3.0.1
+mpmath==1.3.0
 msgpack==1.0.5
-mypy-extensions==1.0.0
-nbclassic==1.0.0
-nbclient==0.8.0
+munkres==1.1.4
+mypy-extensions @ file:///home/conda/feedstock_root/build_artifacts/mypy_extensions_1675543315189/work
+nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1683202085119/work
+nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1684790896106/work
 nbconvert==7.6.0
 nbformat==5.9.1
-nest-asyncio==1.5.6
-notebook==6.5.4
-notebook_shim==0.2.3
+ndim==0.1.22
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1664684991461/work
+networkx==3.1
+notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1680870634737/work
+notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1682360583588/work
+npx==0.1.1
+ntplib==0.4.0
 numexpr==2.8.4
 numpy==1.22.4
+oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1666056362788/work
 openpyxl==3.1.2
-overrides==7.3.1
-packaging==23.1
+orthopy==0.9.8
+overrides @ file:///home/conda/feedstock_root/build_artifacts/overrides_1666057828264/work
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1681337016113/work
+pamela==1.0.0
 pandas==2.0.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.1
-pexpect==4.8.0
-pickleshare==0.7.5
+pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+pathspec @ file:///home/conda/feedstock_root/build_artifacts/pathspec_1678853982175/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1667297516076/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 Pillow==10.0.0
 pipreqs==0.4.13
+pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1633981968097/work
 platformdirs==3.8.1
 pluggy==1.2.0
+pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1679580333621/work
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
+propobject==0.1.3
+psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1681775207008/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
 py-cpuinfo==9.0.0
+py-machineid==0.4.3
 pyarrow==12.0.1
-pycodestyle==2.10.0
-pycparser==2.21
-pyerfa==2.0.0.3
-pyflakes==3.0.1
-Pygments==2.15.1
-pyparsing==3.0.9
+pycodestyle @ file:///home/conda/feedstock_root/build_artifacts/pycodestyle_1669306857274/work
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+pycurl==7.45.1
+pyerfa @ file:///Users/runner/miniforge3/conda-bld/pyerfa_1679552949473/work
+pyflakes @ file:///home/conda/feedstock_root/build_artifacts/pyflakes_1669319921641/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1681904169130/work
+pyifu==0.10.7
+PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1683676063469/work
+pylephare==1.0.0
+PyNaCl==1.5.0
+pyobjc-core @ file:///Users/runner/miniforge3/conda-bld/pyobjc-core_1686129289943/work
+pyobjc-framework-Cocoa @ file:///Users/runner/miniforge3/conda-bld/pyobjc-framework-cocoa_1686136016408/work
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1685514481738/work
+pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
+pypng==0.20220715.0
+pyrsistent @ file:///Users/runner/miniforge3/conda-bld/pyrsistent_1672681537313/work
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
 pytest==7.4.0
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3
-PyYAML==6.0
-pyzmq==25.1.0
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1677079630776/work
+python-license-manager==0.2.8
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1680088766131/work
+PyYAML @ file:///Users/runner/miniforge3/conda-bld/pyyaml_1666772543719/work
+pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1685519412652/work
 pz-rail-base==0.0.4
 pz-rail-bpz==0.1.0
 qp-prob==0.8.3
+quadpy==0.17.12
 referencing==0.29.1
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
+requests-cache==1.1.0
+rfc3339-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1638811747357/work
+rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
+rich==13.4.2
+rich-argparse==1.2.0
 rpds-py==0.8.10
+ruamel.yaml @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml_1685519195041/work
+ruamel.yaml.clib @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml.clib_1670412881259/work
 scipy==1.11.1
-Send2Trash==1.8.2
-six==1.16.0
+Send2Trash @ file:///Users/runner/miniforge3/conda-bld/send2trash_1682601407921/work
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
+sncosmo @ file:///Users/runner/miniforge3/conda-bld/sncosmo_1682785780704/work
+sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1662051266223/work
+snowballstemmer @ file:///home/conda/feedstock_root/build_artifacts/snowballstemmer_1637143057757/work
 soupsieve==2.4.1
-Sphinx==7.0.1
-sphinxcontrib-applehelp==1.0.4
+Sphinx @ file:///home/conda/feedstock_root/build_artifacts/sphinx_1683930791661/work
+sphinxcontrib-applehelp @ file:///home/conda/feedstock_root/build_artifacts/sphinxcontrib-applehelp_1674487779667/work
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-htmlhelp @ file:///home/conda/feedstock_root/build_artifacts/sphinxcontrib-htmlhelp_1675256494457/work
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-stack-data==0.6.2
+sphinxcontrib-serializinghtml @ file:///home/conda/feedstock_root/build_artifacts/sphinxcontrib-serializinghtml_1649380998999/work
+SQLAlchemy @ file:///Users/runner/miniforge3/conda-bld/sqlalchemy_1684569131772/work
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+sympy==1.12
 synphot==1.2.1
 tables==3.8.0
 tables-io==0.8.1
-terminado==0.17.1
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-tzdata==2023.3
+terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1670254106711/work
+tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1666100256010/work
+tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
+tomli_w==1.0.0
+tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1684150425472/work
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1677948868469/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1675110562325/work
+typing-utils @ file:///home/conda/feedstock_root/build_artifacts/typing_utils_1622899189314/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1685704949284/work
+tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1680081134351/work
+unicodedata2 @ file:///Users/runner/miniforge3/conda-bld/unicodedata2_1667239979860/work
 uri-template==1.3.0
-urllib3==2.0.3
-wcwidth==0.2.6
+url-normalize==1.4.3
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1686156552494/work
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1673864653149/work
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.1
-widgetsnbextension==3.6.4
+widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1680041491747/work
 wrapt==1.15.0
+x21==0.4.15
+xarray @ file:///home/conda/feedstock_root/build_artifacts/xarray_1684536552446/work
+xarray-einstats @ file:///home/conda/feedstock_root/build_artifacts/xarray-einstats_1674259665168/work
 yarg==0.1.9
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1677313463193/work
